<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Header_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Ibuprofeno"
                android:id="@+id/medicament_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Padecimiento"
                android:id="@+id/padecimiento_name"
                android:layout_marginLeft="15dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.36"
        android:showDividers="beginning"
        android:nestedScrollingEnabled="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Dosificación:"
            android:id="@+id/dosificacion_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Dosis:"
            android:id="@+id/dose_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Próxima toma:"
            android:id="@+id/next_dose_title" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="146dp"
                android:layout_height="126dp"
                android:id="@+id/photo_med"
                android:src="@drawable/ibuprofeno"
                android:contentDescription="@string/photo_med"
                android:layout_gravity="right"
                android:layout_weight="0.08"
                android:background="@drawable/edittextround"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:weightSum="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/modify_dose"
                android:drawableLeft="@drawable/writing46"
                android:text="@string/modificar_dosis_btn_name"
                android:singleLine="true"
                android:textAllCaps="false"
                android:background="@drawable/corners"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/delete96"
                android:text="@string/borrar_medicacion"
                android:id="@+id/delete_dose"
                android:textAllCaps="false"
                android:singleLine="false"
                android:background="@drawable/corners"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/verification5"
                android:textAllCaps="false"
                android:background="@drawable/corners"
                android:text="Dosis tomadas"
                android:id="@+id/button" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
